crates/biome_html_parser/tests/html_specs/ok/svelte/snippet_multiple.svelte
{#snippet header()}
  <h1>Header</h1>
{/snippet}

{#snippet footer()}
  <p>Footer</p>
{/snippet}
