crates/biome_html_parser/tests/html_specs/error/svelte/await_catch_only_missing_binding.svelte
{#await promise catch}
  <p>Error!</p>
{/await}
